--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   nextjs:
     image: meu-nextjs
@@ -7,3 +5,8 @@ services:
     ports:
       - "3000:3000"
     restart: unless-stopped
+    environment:
+      - DATABASE_URL=file:./dev.db
+    volumes:
+      - .:/app
+      - /app/node_modules
