--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,20 +1,23 @@
 [phases.setup]
 cmds = [
-  "npm install",
-  "npx prisma generate",
-  "npx prisma db push || true"
+    "npm install",
+    "npx prisma generate",
+    "npx prisma db push || true"
 ]
 
 [phases.build]
 cmds = [
-  "npm run build"
+    "npm install",
+    "npx prisma generate",
+    "npm run build"
 ]
 
 [phases.start]
 cmds = [
-  "npx prisma migrate dev --name init || true",
-  "npx prisma db seed || true",
-  "npm run start"
+    "ls -la .next",
+    "npx prisma migrate dev --name init || true",
+    "npx prisma db seed || true",
+    "npm run start"
 ]
 
 [variables]
