fix: nixpacks toml

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 cmds = [
     "npm install",
     "npx prisma generate",
-    "npx prisma db push || true"
+    "npx prisma db push || true",
     "npx prisma migrate dev || true"
 ]
 
