fix: nixpacks build

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,13 +1,7 @@
 [phases.setup]
 cmds = [
-    "npm install",
     "npx prisma generate",
     "npx prisma db push || true",
-    "npx prisma migrate dev || true"
-]
-
-[phases.build]
-cmds = [
-    "npm run prisma:seed",
-    "npm run build"
+    "npx prisma migrate dev || true",
+    "npm run prisma:seed"
 ]
