--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,11 @@
 [phases.setup]
-providers = ["nodejs_18", "npm-9_x", "openssl", "curl", "wget"]
+providers = [
+    "nodejs_18",
+    "npm-9_x",
+    "openssl",
+    "curl",
+    "wget"
+]
 cmds = [
     "npx prisma generate",
     "npx prisma db push",
@@ -11,8 +17,8 @@ cmds = ["npm ci --legacy-peer-deps"]
 
 [phases.build]
 cmds = [
-    "npm run build"
-    "npm run prisma:seed",
+    "npm run build",
+    "npm run prisma:seed"
 ]
 
 [start]
