--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,8 +8,8 @@ providers = [
 ]
 cmds = [
     "npx prisma generate",
-    "npx prisma db push",
-    "npx prisma migrate dev"
+    "npx prisma db push || true",
+    "npx prisma migrate dev || true"
 ]
 
 [phases.install]
