--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,7 +7,10 @@ providers = [
     "wget"
 ]
 cmds = [
-    "pnpm install -g prisma",
+    "npm install -g corepack",
+    "corepack enable",
+    "corepack prepare pnpm@9.1.0 --activate",
+    "pnpm install",
     "pnpm prisma generate",
     "pnpm prisma db push || true",
     "pnpm prisma migrate dev || true"
