--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.2",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.483.0",
@@ -25,7 +26,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-input-mask": "^2.0.4",
+    "react-intersection-observer": "^9.16.0",
+    "react-number-format": "^5.4.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -40,6 +43,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-input-mask": "^3.0.6",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
